Synchronization error. Resending

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,19 +7,58 @@ output:
 
 
 ## Loading and preprocessing the data
+```{r, echo = TRUE, message=FALSE}
+# load library
+library(dplyr)
+library(ggplot2)
 
+# unzip and load data
+unzip('activity.zip')
+df <- read.csv(file = "activity.csv",
+               colClasses = c('integer', 'Date', 'integer'))
+```
 
 
 ## What is mean total number of steps taken per day?
+```{r, echo = TRUE}
+total_steps_per_day <- df %>%
+    group_by(date) %>%
+    summarise(total_steps = sum(steps, na.rm = TRUE))
 
+qplot(total_steps, data = total_steps_per_day,
+      main = 'Total number of steps per day',
+      xlab = 'Total number of steps', ylab = 'Days')
+```
 
+Mean of the total number of steps taken per day =
+```r round(mean(total_steps_per_day$total_steps))```
+
+Median of the total number of steps taken per day =
+```r median(total_steps_per_day$total_steps)```
 
 ## What is the average daily activity pattern?
+```{r, echo = TRUE}
+average_steps_per_interval <- df %>%
+    group_by(interval) %>%
+    summarise(average_steps = mean(steps, na.rm = TRUE))
 
+qplot(interval, average_steps, data = average_steps_per_interval, geom = 'line',
+      main = 'Average number of steps taken, averaged across all days',
+      xlab = '5-minute interval', ylab = 'Average number of steps')
 
+average_steps_per_interval_sorted <- average_steps_per_interval %>%
+    arrange(desc(average_steps))
+```
+
+```r average_steps_per_interval_sorted$interval[1]```-th
+5-minute interval contains the maximum number of steps 
+(```r average_steps_per_interval_sorted$average_steps[1]```)
 
 ## Imputing missing values
-
-
+```{r, echo = TRUE}
+total_na <- sum(is.na(df))
+```
+Total number of missing values in the dataset =
+```r total_na```
 
 ## Are there differences in activity patterns between weekdays and weekends?
